--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,15 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+:root {
+  --header-font: "Edu NSW ACT Foundation", cursive;
+  --p-font: "Abel", sans-serif;
+}
+
 .App {
   text-align: center;
+  font-family: var(--p-font);
+  font-size: 17px;
 }
 
 .App-logo {
