--- a/src/Header.css
+++ b/src/Header.css
@@ -9,13 +9,18 @@ a {
 }
 
 /* header */
+h1 {
+  font-family: var(--header-font);
+  font-size: 80px;
+  padding: 10px 0;
+}
 
 .header {
   background-color: #fff;
   box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.1);
-  position: fixed;
   width: 100%;
   z-index: 3;
+  display: flex;
 }
 
 .header ul {
@@ -23,19 +28,17 @@ a {
   padding: 0;
   list-style: none;
   overflow: hidden;
-  background-color: #fff;
 }
 
 .header li a {
   display: block;
   padding: 20px 20px;
-  border-right: 1px solid #f4f4f4;
   text-decoration: none;
 }
 
 .header li a:hover,
 .header .menu-btn:hover {
-  background-color: #f4f4f4;
+  color: rgb(206, 68, 9);
 }
 
 .header .logo {
@@ -52,6 +55,7 @@ a {
   clear: both;
   max-height: 0;
   transition: max-height 0.2s ease-out;
+  width: 100%;
 }
 
 /* menu icon */
@@ -100,7 +104,7 @@ a {
 }
 
 .header .menu-btn:checked ~ .menu {
-  max-height: 240px;
+  max-height: 260px;
 }
 
 .header .menu-btn:checked ~ .menu-icon .navicon {
@@ -120,9 +124,15 @@ a {
   top: 0;
 }
 
-/* 48em = 768px */
+.icons {
+  display: none;
+}
 
-@media (min-width: 48em) {
+.search-input {
+  display: none;
+}
+
+@media (min-width: 915px) {
   .header li {
     float: left;
   }
@@ -136,5 +146,42 @@ a {
   }
   .header .menu-icon {
     display: none;
+  }
+
+  .search-input {
+    display: block;
+    padding-left: 10px;
+  }
+
+  .icons {
+    display: flex;
+  }
+
+  .basket {
+    position: relative;
+  }
+
+  .basket:hover,
+  .login:hover,
+  .text-on-cart:hover {
+    color: rgb(206, 68, 9);
+  }
+
+  .text-on-cart {
+    color: white;
+    position: absolute;
+    top: 53%;
+    left: 47%;
+    font-size: 14px;
+    font-weight: bold;
+    width: 100%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+
+  .icons img {
+    max-width: none;
   }
 }
