--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,32 @@
   text-align: center;
   font-family: var(--p-font);
   font-size: 17px;
+  background-color: white;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+.text-on-image {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.text-on-image h1 {
+  font-size: 50px;
+}
+
+.text-on-image button {
+  border: 1px solid black;
+  padding: 10px 15px;
+}
+
+.text-on-image button:hover {
+  color: white;
+  background-color: black;
 }
 
 @media (prefers-reduced-motion: no-preference) {
