--- a/src/ImageCarousel.css
+++ b/src/ImageCarousel.css
@@ -12,6 +12,7 @@
 .text-on-image button {
   border: 1px solid black;
   padding: 10px 15px;
+  transition: all ease-in-out 250ms;
 }
 
 .text-on-image button:hover {
