--- a/src/Footer.css
+++ b/src/Footer.css
@@ -10,8 +10,14 @@ h4 {
 }
 
 .footer-menu a,
-.extra-menu a {
+.extra-menu p {
   color: rgb(122, 108, 108);
+  cursor: pointer;
+}
+
+.footer-menu a:hover,
+.extra-menu p:hover {
+  text-decoration: underline;
 }
 
 .footer-icons img {
